--- a/assets/src/sass/components/_modal.scss
+++ b/assets/src/sass/components/_modal.scss
@@ -1,7 +1,7 @@
 /* MODAL */
 
 .modal {
-  display: none;
+  display: table;
   background-color: rgba($black, 0.6);
   position: fixed;
   top: 0;
@@ -9,14 +9,10 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  z-index: 99999;
 
-  &.active {
-    display: table;
-    z-index: 99999;
-
-    @include breakpoint(max-width 800px) {
-      display: block;
-    }
+  @include breakpoint(max-width 800px) {
+    display: block;
   }
 
   &__type {
@@ -39,10 +35,11 @@
     display: block;
     margin: 0 auto;
     width: 100%;
-    max-width: 800px;
+    max-width: 600px;
     max-height: 100vh;
     padding: $base-margin*5 $base-margin*2 $base-margin*2 $base-margin*2;
     box-sizing: border-box;
+    border-radius: 10px;
     -ms-overflow-style: none;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -56,6 +53,12 @@
     position: absolute;
     top: $base-line-height*2;
     right: $base-line-height*2;
+
+    i {
+      margin-left: $base-margin*0.5;
+      margin-top: -1px;
+      vertical-align: middle;
+    }
   }
 
   &__header {
