--- a/assets/src/sass/forms/base.scss
+++ b/assets/src/sass/forms/base.scss
@@ -29,16 +29,16 @@ form,
       text-align: center;
     }
   }
+}
 
-  // LABEL STYLE
-  label {
-    display: block;
-    color: $mid_gray;
-    font-size: 0.875rem;
-    line-height: 1.625rem;
-    margin-right: $base-margin;
-    margin-bottom: $base-margin*0.5;
-  }
+// LABEL STYLE
+label {
+  display: block;
+  color: $mid_gray;
+  font-size: 0.875rem;
+  line-height: 1.625rem;
+  margin-right: $base-margin;
+  margin-bottom: $base-margin*0.5;
 }
 
 // GENERAL FIELD WRAPPER
@@ -49,7 +49,7 @@ form,
   overflow: hidden;
 
   &--no-margin,
-  &:last-child {
+  &:last-of-type {
     margin-bottom: 0 !important;
   }
 
