Added Referral parent component/Added Intro and Who Referral child components with logic

--- a/assets/src/sass/components/_navigation.scss
+++ b/assets/src/sass/components/_navigation.scss
@@ -3,6 +3,10 @@
 .nav {
   display: inline-block;
 
+  label {
+    color: $white;
+  }
+
   &__link {
     position: relative;
     display: inline-block;
