Added Client component to Referral

--- a/assets/src/sass/forms/toggle.scss
+++ b/assets/src/sass/forms/toggle.scss
@@ -16,7 +16,7 @@
   }
 
   &__input {
-    display: none;
+    margin-top: $base-margin*0.5;
     margin-left: $base-margin*3.5;
     padding-left: $base-margin*1.5;
     border-left: 4px solid $puerto_rico;
