--- a/assets/src/sass/components/_tag-cloud.scss
+++ b/assets/src/sass/components/_tag-cloud.scss
@@ -3,5 +3,9 @@
 .tag-cloud {
     .btn {
         margin: $base-margin $base-margin*0.75;
+
+        @include breakpoint($break_mobile) {
+            margin: $base-margin*0.5 0;
+        }
     }
 }
