--- a/assets/src/sass/snippets/_header.scss
+++ b/assets/src/sass/snippets/_header.scss
@@ -37,8 +37,8 @@
       display: inline-block;
     }
 
-    @include breakpoint($break_tablet) {
-      margin-bottom: $base-margin*4;
+    @include breakpoint($break_mobile) {
+      display: none;
     }
   }
 
@@ -51,6 +51,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      margin-bottom: $base-margin;
     }
   }
 
@@ -107,6 +108,7 @@
       display: inline-block;
       max-width: 43px;
       margin-right: $base-margin*0.5;
+      margin-bottom: 0;
       vertical-align: middle;
       font-size: 0.875rem;
       line-height: 0.925rem;
