Various responsive tweaks

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -31,6 +31,7 @@
 @import "components/pagination";
 @import "components/pod";
 @import "components/quote";
+@import "components/search";
 @import "components/service";
 @import "components/side-module";
 @import "components/sidebar";
