--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -163,7 +163,7 @@ body {
     width: 100%;
     padding-left: 0;
     padding-right: 0;
-    margin-bottom: $base-margin*2;
+    margin-bottom: $base-margin;
 
     &:last-child {
       margin-bottom: 0;
