--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -57,11 +57,12 @@
         background-repeat: no-repeat;
         color: $san_juan;
         padding: $base-margin*1.5;
-        margin-top: $base-margin*1.5;
         box-sizing: border-box;
 
         label {
+            display: inline-block;
             margin-right: $base-margin*1.5;
+            margin-bottom: 0;
         }
 
         a {
