--- a/assets/src/sass/components/_map.scss
+++ b/assets/src/sass/components/_map.scss
@@ -9,7 +9,7 @@
 
     @include breakpoint($break_mobile) {
         border-radius: 0;
-        height: 290px;
+        height: 420px;
     }
 
     &__overlay { 
@@ -23,14 +23,18 @@
             left: 0;
         }
 
-        &--right {
-            right: 0;
-        }
-
         > div {
             height: 100%;
             border-radius: 0;
             overflow-y: scroll;
+        }
+
+        @include breakpoint($break_tablet) {
+            width: 50%;
+        }
+
+        @include breakpoint($break_mobile) {
+            width: 100%;
         }
     }
 
