--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -126,6 +126,17 @@
         color: $mid_gray;
         padding: $base-margin*1.5 $base-margin*2;
         box-sizing: border-box;
+
+        &__actions {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            &__close {
+            
+                margin-left: $base-margin;
+            }
+        }
     }
 
     &__name {
