Fixed shortlist errors/Added css conditional for print buttons on devices

--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -147,6 +147,13 @@ a {
   &:hover {
     text-decoration: none;
   }
+
+  // Hide all print triggers on devices
+  &[href="#print"] {
+    @include breakpoint($break_tablet) {
+      display: none;
+    }
+  }
 }
 
 /* [10] */
