--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -121,6 +121,10 @@
         }
     }
 
+    &__content {
+        
+    }
+
     &__details {
         background-color: $alabaster !important;
         color: $mid_gray;
