--- a/assets/src/sass/components/_media.scss
+++ b/assets/src/sass/components/_media.scss
@@ -1,7 +1,7 @@
 /* MEDIA */
 
 .media {
-	padding: 0 $base-margin*2;
+	margin: 0 $base-margin*2;
 	box-sizing: border-box;
 	border-radius: 16px;
 	overflow: hidden;
