--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -160,6 +160,7 @@
         color: $mid_gray;
         padding: $base-margin*1.5 $base-margin*2;
         box-sizing: border-box;
+        word-break: break-all;
 
         > span {
             display: block;
@@ -179,15 +180,12 @@
 
     &__actions {
         background-color: $alabaster;
-        padding: $base-margin*1.5 $base-margin*2;
+        padding: $base-margin*2.5 $base-margin*2;
         box-sizing: border-box;
 
         .btn {
             display: inline-block;
-
-            &:first-child {
-                margin-right: $base-margin*0.5;
-            }
+            margin: 0 $base-margin*0.25;
         }
     }
 
