Ammended referral form logic closes #90

--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -37,6 +37,7 @@ p {
   font-size: 1.1875rem;
   line-height: 1.4375;
   margin-bottom: $base-margin;
+  word-break: break-all;
 
   &:last-child {
     margin-bottom: 0;
