--- a/assets/src/sass/components/_media.scss
+++ b/assets/src/sass/components/_media.scss
@@ -18,7 +18,11 @@
 }
 
 img {
-  display: block;
+	display: block;
+	
+	&.display-inline {
+		display: inline;
+	}
 
   &.img-responsive {
     width: 100%;
