--- a/assets/src/sass/forms/toggle.scss
+++ b/assets/src/sass/forms/toggle.scss
@@ -43,7 +43,7 @@
     display:inline-block;
     width: 39px;
     height: 39px;
-    margin: 0 $base-line-height*0.5 0 0;
+    margin: 0 $base-margin 0 0;
     vertical-align:middle;
     cursor:pointer;
     -moz-border-radius:  50%;
