--- a/assets/src/sass/snippets/_footer.scss
+++ b/assets/src/sass/snippets/_footer.scss
@@ -7,6 +7,10 @@
   padding: $base-margin*3.75 0;
   margin-top: $base-margin*10;
 
+  p {
+    color: $white;
+  }
+
   &--service {
     margin-top: 0;
 
@@ -84,5 +88,9 @@
         margin-right: $base-margin*1.625;
       }
     }
+  }
+
+  &__disclaimer {
+    margin-top: $base-margin*2.5;
   }
 }
