Added loading icon to stop flash before API loadscloses #60

--- a/assets/src/sass/base/_icons.scss
+++ b/assets/src/sass/base/_icons.scss
@@ -1,3 +1,63 @@
 @import "../icons/fontawesome.scss";
 @import "../icons/solid.scss";
 @import "../icons/brands.scss";
+
+.loading-icon {
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    width: 64px;
+    height: 64px;
+
+    div {
+        position: absolute;
+        top: 27px;
+        width: 11px;
+        height: 11px;
+        border-radius: 50%;
+        background: $silver;
+        animation-timing-function: cubic-bezier(0, 1, 1, 0);
+
+        &:nth-child(1) {
+            left: 6px;
+            animation: loading-icon1 0.6s infinite;
+        }
+        &:nth-child(2) {
+            left: 6px;
+            animation: loading-icon2 0.6s infinite;
+        }
+        &:nth-child(3) {
+            left: 26px;
+            animation: loading-icon2 0.6s infinite;
+        }
+        &:nth-child(4) {
+            left: 45px;
+            animation: loading-icon3 0.6s infinite;
+        }
+    }
+}
+
+@keyframes loading-icon1 {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+@keyframes loading-icon3 {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+@keyframes loading-icon2 {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(19px, 0);
+    }
+}
