Styled zoom control closes #82

--- a/assets/src/sass/base/_icons.scss
+++ b/assets/src/sass/base/_icons.scss
@@ -4,7 +4,7 @@
 
 .loading-icon {
     display: block;
-    margin: 0 auto;
+    margin: $base-margin*2.5 auto 0;
     position: relative;
     width: 64px;
     height: 64px;
