--- a/assets/src/sass/components/_map.scss
+++ b/assets/src/sass/components/_map.scss
@@ -45,3 +45,47 @@
         z-index: 0;
     }
 }
+
+.leaflet-control {
+    background: $alabaster;
+    color: $san_juan;
+    border: none !important;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    margin: 0 0 $base-margin*3.5 !important;
+    padding: $base-margin*0.625 $base-margin $base-margin*0.625 $base-margin*2.5;
+    box-sizing: border-box;
+
+    &:before {
+        content: 'Zoom';
+        display: inline-block;
+        margin-right: $base-margin;
+        font-size: 1.1875rem;
+        line-height: 1.4375rem;
+        vertical-align: middle
+    }
+
+    > a {
+        display: inline-block !important;
+        width: auto !important;
+        height: auto !important;
+        background: transparent !important;
+        font-size: 1.1875rem !important;
+        line-height: 1.4375rem !important;
+        color: $san_juan !important;
+        border: none !important;
+        margin: 0 $base-margin*0.5 !important;
+        vertical-align: middle !important;
+        opacity: 0.8;
+
+        &:hover {
+            display: inline-block;
+            background: none;
+            border: none;
+        }
+    }
+}
+
+.leaflet-control-attribution {
+    display: none !important;
+}
