--- a/assets/src/sass/snippets/_footer.scss
+++ b/assets/src/sass/snippets/_footer.scss
@@ -92,5 +92,9 @@
 
   &__disclaimer {
     margin-top: $base-margin*2.5;
+
+    @include breakpoint($break_tablet) {
+      margin-top: $base-margin*0.5;
+    }
   }
 }
