--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -8,6 +8,10 @@
     padding: $base-margin*5 $base-margin*4.5;
     box-sizing: border-box;
 
+    @include breakpoint($break_tablet) {
+        padding: $base-margin*3.5 $base-margin*3.5 $base-margin*3.5 $base-margin*3.5;
+    }
+
     @include breakpoint($break_mobile) {
         padding: $base-margin*2.5 $base-margin*2.5 $base-margin*2 $base-margin*2.5;
     }
@@ -59,6 +63,10 @@
         padding: $base-margin*1.5;
         box-sizing: border-box;
 
+        @include breakpoint($break_tablet) {
+            background: transparent;
+        }
+
         label {
             display: inline-block;
             margin-right: $base-margin*1.5;
@@ -81,7 +89,9 @@
     }
 
     &__action {
-        margin-bottom: $base-margin*1.5;
+        .btn {
+            margin-bottom: $base-margin*1.5;
+        }
         
         &__title {
             display: inline-block;
