Remove flex container classes site wide

--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -104,9 +104,9 @@ body {
     justify-content: center;
   }
 
-  // Fill space
-  &--space {
-    justify-content: space-between;
+  // Don't fill space
+  &--no-space {
+    justify-content: flex-start;
   }
 }
 
