--- a/assets/src/sass/components/_title-card.scss
+++ b/assets/src/sass/components/_title-card.scss
@@ -92,6 +92,10 @@
         .btn {
             margin-bottom: $base-margin*1.5;
         }
+
+        p {
+            margin-bottom: $base-margin*2.5;
+        }
         
         &__title {
             display: inline-block;
