--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -9,6 +9,15 @@
     will-change: box-shadow;
     cursor: pointer;
 
+    @include breakpoint($break_tablet) {
+        margin-bottom: $base-margin*2;
+    }
+
+    @include breakpoint($break_mobile) {
+        margin-bottom: 0;
+        border-radius: 0;
+    }
+
     &:hover {
         box-shadow: 0 2px 10px 0 $mine_shaft;
     }
@@ -94,7 +103,7 @@
         box-sizing: border-box;
 
         @include breakpoint($break_mobile) {
-            background-color: $iceberg;
+            background-color: $iceberg !important;
             padding: $base-margin;
 
             .service__name {
@@ -123,7 +132,9 @@
     }
 
     &__content {
-        
+        @include breakpoint($break_mobile) {
+            display: none;
+        }
     }
 
     &__details {
