--- a/assets/src/sass/snippets/_header.scss
+++ b/assets/src/sass/snippets/_header.scss
@@ -17,6 +17,15 @@
     width: 100%;
     height: 100%;
     z-index: 999;
+
+    #google_translate_element {
+      @include breakpoint($break_tablet) {
+        display: block;
+        top: auto;
+        bottom: $base-margin*1.5;
+        right: auto;
+      }
+    }
   }
 
   .flex-container {
@@ -37,7 +46,7 @@
       display: inline-block;
     }
 
-    @include breakpoint($break_mobile) {
+    @include breakpoint($break_tablet) {
       display: none;
     }
   }
