--- a/assets/src/sass/snippets/_section.scss
+++ b/assets/src/sass/snippets/_section.scss
@@ -53,7 +53,7 @@
     }
 
     @include breakpoint($break_mobile) {
-      padding: $base-margin*3 0 $base-margin*2 0;
+      padding: $base-margin*3 0 $base-margin*4.5 0;
     }
 
     &:before,
@@ -65,6 +65,10 @@
       content: url('/assets/dist/img/trees/tree-blue--large.svg');
       top: -$base-margin;
       left: $base-margin*4.5;
+
+      @include breakpoint($break_mobile) {
+        top: -$base-margin*2.5;
+      }
     }
 
     &:after {
@@ -101,19 +105,23 @@
 
     &--reduce-padding {
       padding: $base-margin*2.5 0;
-
-      @include breakpoint($break_tablet) {
-        padding: $base-margin 0;
-      }
-  
-      @include breakpoint($break_mobile) {
-        padding: $base-margin 0;
-      }
     }
 
     > .flex-container--mobile-no-padding {
       @include breakpoint($break_mobile) {
         margin: 0 -$base-margin;
+      }
+    }
+
+    .title-card {
+      padding: $base-margin*4.5 $base-margin*2;
+
+      @include breakpoint($break_mobile) {
+        padding: $base-margin*4.5 $base-margin*3 $base-margin*2 $base-margin*3;
+      }
+
+      &__action {
+        margin-top: $base-margin*2.5;
       }
     }
 
@@ -246,6 +254,10 @@
 
     &:last-child {
       margin-bottom: 0;
+    }
+
+    &--mobile-padding {
+      padding: 0 $base-margin*1.5;
     }
   }
 }
