Wait time filtering now working closes #92

--- a/assets/src/sass/forms/base.scss
+++ b/assets/src/sass/forms/base.scss
@@ -52,8 +52,7 @@ label {
     margin-right: 0;
   }
 
-  &--no-margin,
-  &:last-of-type {
+  &--no-margin {
     margin-bottom: 0 !important;
   }
 
