--- a/assets/src/sass/components/_map.scss
+++ b/assets/src/sass/components/_map.scss
@@ -12,6 +12,11 @@
         height: 420px;
     }
 
+    &--service {
+        height: 195px;
+        border-radius: 0;
+    }
+
     &__overlay { 
         position: absolute;
         top: 0;
