Service page responsive tweaks

--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -171,7 +171,7 @@ body {
     width: 100%;
     padding-left: 0;
     padding-right: 0;
-    margin-bottom: $base-margin;
+    margin-bottom: $base-margin*2;
 
     &.flex-col--gutter {
       width: 100%;
