--- a/assets/src/sass/base/_icons.scss
+++ b/assets/src/sass/base/_icons.scss
@@ -1,5 +1,6 @@
 @import "../icons/fontawesome.scss";
 @import "../icons/solid.scss";
+@import "../icons/regular.scss";
 @import "../icons/brands.scss";
 
 .loading-icon {
