--- a/assets/src/sass/components/_media.scss
+++ b/assets/src/sass/components/_media.scss
@@ -7,6 +7,10 @@
 	border-radius: 16px;
 	overflow: hidden;
 
+	@include breakpoint($break_mobile) {
+		margin: 0;
+	}
+
 	&--grid {
 		img {
 			display: inline-block;
