--- a/assets/src/sass/components/_modal.scss
+++ b/assets/src/sass/components/_modal.scss
@@ -26,6 +26,11 @@
   .valign {
     display: table-cell;
     vertical-align: middle;
+
+    @include breakpoint(max-width 800px) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__wrapper {
@@ -46,6 +51,12 @@
 
     &::-webkit-scrollbar {
       display: none;
+    }
+
+    @include breakpoint(max-width 800px) {
+      max-width: 100%;
+      border-radius: 0;
+      height: 100vh;
     }
   }
 
