--- a/assets/src/sass/components/_tag-cloud.scss
+++ b/assets/src/sass/components/_tag-cloud.scss
@@ -5,7 +5,12 @@
         margin: $base-margin $base-margin*0.75;
 
         @include breakpoint($break_mobile) {
-            margin: $base-margin*0.5 0;
+            margin: $base-margin*0.5;
+            font-size: 1rem;
+
+            i {
+                font-size: 1rem;
+            }
         }
     }
 }
