--- a/assets/src/sass/snippets/_section.scss
+++ b/assets/src/sass/snippets/_section.scss
@@ -24,7 +24,7 @@
   }
 
   &--reduce-padding {
-    padding: $base-margin*2.5 !important;
+    padding: $base-margin*2.5;
   }
 
   // Social media
@@ -125,7 +125,9 @@
       }
 
       &__action {
-        margin-top: $base-margin*2.5;
+        @include breakpoint($break_mobile) {
+          margin-top: $base-margin*1.5;
+        }
       }
 
       &--reduce-padding {
