--- a/assets/src/sass/components/_link.scss
+++ b/assets/src/sass/components/_link.scss
@@ -7,11 +7,21 @@
     line-height: 1.625rem;
     text-decoration: none;
 
+    @include breakpoint($break_mobile) {
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+    }
+
     i {
         display: inline-block;
         vertical-align: middle;
         font-size: 1.25rem;
         line-height: 1.625rem;
+
+        @include breakpoint($break_mobile) {
+            font-size: 1rem;
+            line-height: 1.375rem;
+        }
     }
 
     &--icon-before {
@@ -33,6 +43,10 @@
         height: 1px;
         background-color: $elm;
         margin-top: $base-margin*0.25;
+
+        @include breakpoint($break_mobile) {
+            margin-top: 0;
+        }
     }
 
     &--small {
