--- a/assets/src/sass/snippets/_section.scss
+++ b/assets/src/sass/snippets/_section.scss
@@ -96,6 +96,7 @@
     @include breakpoint($break_tablet) {
       padding: $base-margin*6.5 0 $base-margin*4.5 0;
       margin-bottom: $base-margin*3.5;
+      margin-top: $base-margin*3.25;
     }
 
     @include breakpoint($break_mobile) {
@@ -108,11 +109,11 @@
     }
 
     .title-card {
-      padding: $base-margin*4.5 $base-margin*1.5;
-      background-size: 110% 100%;
+      padding: $base-margin*3;
 
       @include breakpoint($break_mobile) {
-        padding: $base-margin*3 $base-margin*2;
+        padding: $base-margin*3 $base-margin*1.5;
+        background-size: 110% 100%;
 
         .page--service & {
           padding: $base-margin*4.5 $base-margin*2 $base-margin*2.5 $base-margin*2;
@@ -176,6 +177,34 @@
 
           .page--referral &, {
             top: -$base-margin*3.5;
+          }
+        }
+      }
+
+      &.section--reduce-padding {
+        &:before {
+          top: -$base-margin;
+
+          @include breakpoint($break_tablet) {
+            top: -$base-margin*2;
+          }
+
+          @include breakpoint($break_mobile) {
+            top: -$base-margin*3.5;
+          }
+        }
+
+        &::after {
+          top: 0;
+
+          @include breakpoint($break_tablet) {
+            top: -$base-margin*1.5;
+            right: 34%;
+          }
+
+          @include breakpoint($break_mobile) {
+            top: -$base-margin*3;
+            right: 20%;
           }
         }
       }
