--- a/assets/src/sass/components/_map.scss
+++ b/assets/src/sass/components/_map.scss
@@ -25,6 +25,7 @@
         width: 360px;
         height: 100%;
         z-index: 999;
+        overflow-y: auto;
 
         &--left {
             left: 0;
