--- a/assets/src/sass/components/_service.scss
+++ b/assets/src/sass/components/_service.scss
@@ -65,20 +65,23 @@
         padding: 0px $base-margin*2;
 
         &__item {
-            width: 50%;
+            display: flex;
+            align-items: center;
             color: $san_juan;
             padding: $base-margin*0.75 0;
 
+            &:first-child {
+                margin-right: $base-margin*2.5;
+            }
+
             i {
-                display: inline-block;
                 font-size: 1.1875rem;
                 line-height: 1.5rem;
                 margin-right: $base-margin;
-                vertical-align: middle;
             }
 
             @include breakpoint($break_mobile) {
-                padding: $base-margin*0.25 0;
+                padding: $base-margin*0.5 0;
             }
         }
     }
