Updated map responsive overlay/Ammended location output to only make one API call

--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -33,6 +33,16 @@ body {
       overflow: hidden;
     }
   }
+
+  &.noscroll--mobile {
+    @include breakpoint($break_tablet) {
+      overflow: auto;
+    }
+
+    @include breakpoint($break_mobile) {
+      overflow: hidden;
+    }
+  }
 }
 
 // MAIN CONTAINER
