--- a/assets/src/sass/components/_button.scss
+++ b/assets/src/sass/components/_button.scss
@@ -26,6 +26,7 @@
     margin-left: $base-margin*0.625;
     font-size: 1.3125rem;
     line-height: 1.8125rem;
+    margin-top: -2px;
     vertical-align: middle;
 
     @include breakpoint($break_mobile) {
